# license-validator

./: CMakeLists.txt  license-validator.pro  main.cpp  main.qml
src/: validate.cpp  validate.h
